# ui_cpp

./: .gitignore  CMakeLists.txt  Makefile  Makefile-bak  app  build.sh
inc/: amoled.h  bmp.h  gbk2312.h  jpeg.h  touch.h  view.h  view.hpp  viewConfig.h  viewPen.h  viewPicture.h  viewShape.h  viewType.h  viewType.hpp  wlan.h
lib/freeType2/freeType2_for_arm_4_9_4/lib/: libfreetype.la  libfreetype.so.6.16.0
lib/freeType2/freeType2_for_gcc_4_8_4/lib/: libfreetype.la  libfreetype.so.6.16.0
lib/freeType2/freeType2_for_gcc_4_8_4/lib/pkgconfig/: freetype2.pc
lib/gbk/: wryh1616.DZK  wryh2020.DZK  wryh2424.DZK  wryh2828.DZK  wryh3232.DZK  wryh4040.DZK  wryh4848.DZK  wryh5656.DZK  wryhc2020.DZK  wryhc2828.DZK  wryhc4040.DZK  wryhc4848.DZK
lib/iconv/iconv_for_arm_4_5_1/lib/: libcharset.la  libcharset.so.1.0.0  libiconv.la  libiconv.so.2.6.0
lib/iconv/iconv_for_arm_4_9_4/lib/: libcharset.la  libcharset.so.1.0.0  libiconv.la  libiconv.so.2.6.0
lib/iconv/iconv_for_gcc_4_8_4/lib/: libcharset.la  libcharset.so.1.0.0  libiconv.la  libiconv.so.2.6.0
lib/jpeg/jpeg_for_arm_4_9_4/lib/: libjpeg.la  libjpeg.so.62.0.0
lib/jpeg/jpeg_for_gcc_4_8_4/include/: jpeglib.h
lib/jpeg/jpeg_for_gcc_4_8_4/lib/: libjpeg.la  libjpeg.so.62.0.0
res/gbk/: wryhc1616.DZK  wryhc2424.DZK  wryhc3232.DZK
src/: amoled.c  bmp.c  gbk2312.c  jpeg.c  main.cpp  touch.c  ttfType.c  view.cpp  viewPen.cpp  viewPicture.cpp  viewShape.cpp  wlan.c
